--- a/css/place-kitty.css
+++ b/css/place-kitty.css
@@ -36,7 +36,7 @@
 
 /* Select the image that has an attribute value matching "Kitty 5" (using attribute selector) */
 
-src /*__write_selector_here__*/ {
+src[Ki/*__write_selector_here__*/ {
   position: absolute;
   z-index: 3;
   top: 217px;
